--- a/BlazorServerExample/Pages/Index.razor
+++ b/BlazorServerExample/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Welcome</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome - OIIE Adapter Shell Test</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+Test app for OIIE Adapter Shell
