--- a/BlazorServerExample/Styles/app.css
+++ b/BlazorServerExample/Styles/app.css
@@ -113,31 +113,15 @@
         @apply text-sm;
     }
 
-    .holly-data-table th {
+    .data-table th {
         @apply px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider whitespace-nowrap;
     }
 
-    .holly-data-table td {
+    .data-table td {
         @apply px-4 py-2;
     }
 
-    .sidemenu-64 {
-        @apply -left-64 w-64 transition-all z-10;
-    }
-
-        .sidemenu-64.open {
-            @apply left-0 transition-all;
-        }
-
-    .sidemenu-blanket {
-        @apply bg-black opacity-0 transition ease-linear pointer-events-none;
-    }
-
-        .sidemenu-blanket.open {
-            @apply opacity-40 transition ease-linear pointer-events-auto;
-        }
-
-    .spinner {
+=    .spinner {
         @apply inline-block w-8 h-8 align-bottom;
         border: .25em solid currentColor;
         border-right-color: transparent;
