--- a/BlazorServerExample/Pages/Request.razor
+++ b/BlazorServerExample/Pages/Request.razor
@@ -52,6 +52,13 @@
             </div>
         </div>
 
+        @if ( !string.IsNullOrEmpty(error) )
+        {
+            <div class="col-span-full">
+                <span class="text-red-500">@error</span>
+            </div>
+        }
+
         <h2 class="col-span-full mt-6 @(viewModel.StructureAssets.Count() == 0 ? "hidden" : "")">Response</h2>
         <table class="col-span-full min-w-full divide-y divide-gray-300 border roundeed data-table @(viewModel.StructureAssets.Count() == 0 ? "hidden" : "")">
             <thead class="bg-gray-100">
@@ -83,12 +90,14 @@
 
 @code {
     bool working;
+    string error = "";
 
     private async Task HandleSubmit()
     {
         Logger.LogInformation("HandleSubmit called");
 
         working = true;
+        error = "";
 
         try
         {
@@ -98,6 +107,10 @@
 
             // Process the form
             await viewModel.Process();
+        }
+        catch( Exception ex )
+        {
+            error = ex.Message;
         }
         finally
         {
