--- a/BlazorServerExample/Shared/NavMenu.razor
+++ b/BlazorServerExample/Shared/NavMenu.razor
@@ -10,5 +10,10 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Request/Response
             </NavLink>
         </div>
+        <div class="px-3">
+            <NavLink class="menu" href="publish-subscribe">
+                <span class="oi oi-plus" aria-hidden="true"></span> Publish/Subscribe
+            </NavLink>
+        </div>
     </nav>
 </div>
